--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "postinstall": "ng build --aot -prod",
+    "postinstall": "ng build --prod --aot=false",
     "start": "node server.js",
     "deploy": "git push origin master && git push heroku master",
     "ng": "ng",
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular2-in-memory-web-api": "0.0.21",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.0.1",
