dependences and readme update

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "angular2-in-memory-web-api": "0.0.21",
+    "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.0.1",
