--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.2.3",
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
@@ -31,7 +30,7 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.3",
+    "@angular/cli": "^1.5.2",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
